Code refactor and openApi update
